# FIBO

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  default_json_caption.json  generate.py  pyproject.toml
examples/: README.md
examples/outputs/: generate.json  generated_without_teacache.json  inspire.json  refine_edited.json
src/fibo_inference/: __init__.py  fibo_pipeline.py  inference.py  parse_caption.py  pipeline_output.py  prompt_to_json.py  teacache.py  transformer_fibo.py
src/fibo_inference/vlm/: common.py  gemini_api.py  local_vlm.py
src/fine_tuning/: README.md  bria_utils.py  example_structured_prompt.json  fine_tune_fibo.py  fine_tune_utils.py  generate_with_lora.py  lora_utils.py  vae_config.json
src/fine_tuning/exmaple_finetune_data/: metadata.csv
tests/: test_all_modes.py
